create footer area

--- a/home.html
+++ b/home.html
@@ -781,118 +781,192 @@
                     </div>
                 </div>
             </div>
-            </section>
+        </section>
 
-            
-<section id="costing">
-    <div class="container">
-      <div class="row justify-content-center mb-5">
-        <div class="col-lg-5">
-          <article class="article text-center">
-            <h1><b>Simple</b><br>
-                <b> All Inclusive</b>
-              <!-- <span class="yellow-shape position-relative"> -->
-                <b>Pricing</b>
-                <img class="yellowbg position-absolute" src="./assets/image/yellow-bg.png" alt="yellow" style="\margin-left: -170px;margin-top: 39px;"> </span>
-            </h1>
-            <p>No contracts. No surprise fees.</p>
-          </article>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="nav nav-pills mb-5 mx-auto" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
-              <button class="nav-link active" id="pills-monthly-tab" data-bs-toggle="pill" data-bs-target="#pills-monthly" type="button" role="tab" aria-controls="pills-monthly" aria-selected="true">Monthly Plan</button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button class="nav-link" id="pills-annual-tab" data-bs-toggle="pill" data-bs-target="#pills-annual" type="button" role="tab" aria-controls="pills-annual" aria-selected="false">Annual Plan</button>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-lg-10">
-          <div class="costing_cards tab-content" id="pills-tabcontent">
-            <div class="costing_card_wrapper tab-pane fade justify-content-center active show" id="pills-monthly" role="tabpanel" aria-labelledby="pills-monthly-tab">
-              <div class="costing_card gold">
-                <div class="costing_card_header">
-                  <h4>Gold</h4>
-                  <p>Perfect for small marketing teams</p>
-                  <h3 class="price">$59 <sub>.99 / annually</sub></h3>
+
+        <section id="costing">
+            <div class="container">
+                <div class="row justify-content-center mb-5">
+                    <div class="col-lg-5">
+                        <article class="article text-center">
+                            <h1><b>Simple</b><br>
+                                <b> All Inclusive</b>
+                                <!-- <span class="yellow-shape position-relative"> -->
+                                <b>Pricing</b>
+                                <img class="yellowbg position-absolute" src="./assets/image/yellow-bg.png" alt="yellow"
+                                    style="\margin-left: -170px;margin-top: 39px;"> </span>
+                            </h1>
+                            <p>No contracts. No surprise fees.</p>
+                        </article>
+                    </div>
                 </div>
-                <ul class="costing_card_featured">
-                  <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
-                  <li><span><i class="fas fa-check"></i></span> Content Library</li>
-                  <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
-                </ul>
-                <a href="#" class="btn btn-primary try_free">Get Started</a>
-              </div>
-              <div class="costing_card dimond position-relative">
-                <span class="best_sell position-absolute">Best Value</span>
-                <div class="costing_card_header">
-                  <h4>Dimond</h4>
-                  <p>Perfect for small marketing teams</p>
-                  <h3 class="price">$99 <sub>.99 / annually</sub></h3>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <ul class="nav nav-pills mb-5 mx-auto" id="pills-tab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="pills-monthly-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-monthly" type="button" role="tab"
+                                    aria-controls="pills-monthly" aria-selected="true">Monthly Plan</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="pills-annual-tab" data-bs-toggle="pill"
+                                    data-bs-target="#pills-annual" type="button" role="tab" aria-controls="pills-annual"
+                                    aria-selected="false">Annual Plan</button>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <ul class="costing_card_featured">
-                  <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
-                  <li><span><i class="fas fa-check"></i></span> Content Library</li>
-                  <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
-                </ul>
-                <a href="#" class="btn btn-outline-primary try_free">Get Started</a>
-              </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-10">
+                        <div class="costing_cards tab-content" id="pills-tabcontent">
+                            <div class="costing_card_wrapper tab-pane fade justify-content-center active show"
+                                id="pills-monthly" role="tabpanel" aria-labelledby="pills-monthly-tab">
+                                <div class="costing_card gold">
+                                    <div class="costing_card_header">
+                                        <h4>Gold</h4>
+                                        <p>Perfect for small marketing teams</p>
+                                        <h3 class="price">$59 <sub>.99 / annually</sub></h3>
+                                    </div>
+                                    <ul class="costing_card_featured">
+                                        <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
+                                        <li><span><i class="fas fa-check"></i></span> Content Library</li>
+                                        <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-primary try_free">Get Started</a>
+                                </div>
+                                <div class="costing_card dimond position-relative">
+                                    <span class="best_sell position-absolute">Best Value</span>
+                                    <div class="costing_card_header">
+                                        <h4>Dimond</h4>
+                                        <p>Perfect for small marketing teams</p>
+                                        <h3 class="price">$99 <sub>.99 / annually</sub></h3>
+                                    </div>
+                                    <ul class="costing_card_featured">
+                                        <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
+                                        <li><span><i class="fas fa-check"></i></span> Content Library</li>
+                                        <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-outline-primary try_free">Get Started</a>
+                                </div>
+                            </div>
+                            <div class="costing_card_wrapper tab-pane fade justify-content-center" id="pills-annual"
+                                role="tabpanel" aria-labelledby="pills-annual-tab">
+                                <div class="costing_card gold">
+                                    <div class="costing_card_header">
+                                        <h4>Gold</h4>
+                                        <p>Perfect for small marketing teams</p>
+                                        <h3 class="price">$89 <sub>.99 / annually</sub></h3>
+                                    </div>
+                                    <ul class="costing_card_featured">
+                                        <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
+                                        <li><span><i class="fas fa-check"></i></span> Content Library</li>
+                                        <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-primary try_free">Get Started</a>
+                                </div>
+                                <div class="costing_card dimond position-relative">
+                                    <span class="best_sell position-absolute">Best Value</span>
+                                    <div class="costing_card_header">
+                                        <h4>Dimond</h4>
+                                        <p>Perfect for small marketing teams</p>
+                                        <h3 class="price">$120 <sub>.99 / annually</sub></h3>
+                                    </div>
+                                    <ul class="costing_card_featured">
+                                        <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
+                                        <li><span><i class="fas fa-check"></i></span> Content Library</li>
+                                        <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-outline-primary try_free">Get Started</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="costing_card_wrapper tab-pane fade justify-content-center" id="pills-annual" role="tabpanel" aria-labelledby="pills-annual-tab">
-              <div class="costing_card gold">
-                <div class="costing_card_header">
-                  <h4>Gold</h4>
-                  <p>Perfect for small marketing teams</p>
-                  <h3 class="price">$89 <sub>.99 / annually</sub></h3>
+        </section>
+
+
+        <section id="guide">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="own_guid_card position-relative">
+                            <div class="cicle_shape position-absolute">
+                                <img src="./assets/image/cta-shape.png" alt="Cicle shape">
+                            </div>
+                            <div class="own_card_content  d-flex align-items-center justify-content-between">
+                                <h3 class="postion-relative">You can be your own <br> Guiding star with our help</h3>
+                                <a href="#" class="btn position-relative">Get Started</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <ul class="costing_card_featured">
-                  <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
-                  <li><span><i class="fas fa-check"></i></span> Content Library</li>
-                  <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
-                </ul>
-                <a href="#" class="btn btn-primary try_free">Get Started</a>
-              </div>
-              <div class="costing_card dimond position-relative">
-                <span class="best_sell position-absolute">Best Value</span>
-                <div class="costing_card_header">
-                  <h4>Dimond</h4>
-                  <p>Perfect for small marketing teams</p>
-                  <h3 class="price">$120 <sub>.99 / annually</sub></h3>
-                </div>
-                <ul class="costing_card_featured">
-                  <li><span><i class="fas fa-check"></i></span> Course Discussions</li>
-                  <li><span><i class="fas fa-check"></i></span> Content Library</li>
-                  <li><span><i class="fas fa-check"></i></span> 1-hour Mentorship</li>
-                </ul>
-                <a href="#" class="btn btn-outline-primary try_free">Get Started</a>
-              </div>
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div>
+        </section>
 
     </main>
+
+    <footer class="">
+        <div class="footer_top pb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                        <a href="#" class="logo">
+                            <figure>
+                                <img src="./assets/image/logo.png" alt="logo">
+                            </figure>
+                        </a>
+                        <p>Great lesson ideas and lesson plans for ESL teachers! Educators can customize lesson
+                            plans to best.</p>
+                        <div class="icons mt-4">
+                            <a href="#" style="--btn-color: #285da1;"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" style="--btn-color: #03a9f4;"><i class="fab fa-twitter"></i></a>
+                            <a href="#" style="--btn-color: #d2173f;"><i class="fab fa-pinterest-p"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-xxl-3  col-xl-3  col-lg-3 col-md-4 col-sm-5">
+                        <ul class="footer_menu">
+                            <h4>Company</h4>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Courses</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Instructor</a></li>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="#">Become a Teacher</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                        <ul class="footer_menu ps-sm-0">
+                            <h4>Platform</h4>
+                            <li><a href="#">Browse Library</a></li>
+                            <li><a href="#">Library</a></li>
+                            <li><a href="#">Partners</a></li>
+                            <li><a href="#">News & Blogs</a></li>
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Tutorials</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                        <div class="footer_subscribe_form">
+                            <h4>Subscribe</h4>
+                            <form action="#" class="d-flex mb-4">
+                                <input type="email" placeholder="Your email address">
+                                <button type="submit" class=" position-relative">
+                                    <i class="fas fa-arrow-right position-absolute"></i>
+                                    <i class="fas fa-arrow-right position-absolute"></i>
+                                </button>
+                            </form>
+                            <p>Get the latest news and updates right at your inbox.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_bottom text-center">
+            <p class="m-0 py-3">&copy; 2022 Educal, All Rights Reserved. Design By <a href="#">Theme Pure</a></p>
+        </div>
+    </footer>
 
 
 
