create course header, course-tab and course-carts

--- a/home.html
+++ b/home.html
@@ -439,7 +439,7 @@
                             <div class="course__content">
                                 <div class="course__meta d-flex align-items-center justify-content-between">
                                     <div class="course__lesson">
-                                        <span><i class="far fa-book-alt"></i>43 Lesson</span>
+                                        <span><i class="fa-solid fa-book"></i>43 Lesson</span>
                                     </div>
                                     <div class="course__rating">
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i></i>4.5
@@ -482,7 +482,7 @@
                             <div class="course__content">
                                 <div class="course__meta d-flex align-items-center justify-content-between">
                                     <div class="course__lesson">
-                                        <span><i class="far fa-book-alt"></i>72 Lesson</span>
+                                        <span><i class="fa-solid fa-book"></i>72 Lesson</span>
                                     </div>
                                     <div class="course__rating">
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i></i>4.0
@@ -525,7 +525,7 @@
                             <div class="course__content">
                                 <div class="course__meta d-flex align-items-center justify-content-between">
                                     <div class="course__lesson">
-                                        <span><i class="far fa-book-alt"></i>35 Lesson</span>
+                                        <span><i class="fa-solid fa-book"></i>35 Lesson</span>
                                     </div>
                                     <div class="course__rating">
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i></i>4.3
@@ -568,7 +568,7 @@
                             <div class="course__content">
                                 <div class="course__meta d-flex align-items-center justify-content-between">
                                     <div class="course__lesson">
-                                        <span><i class="far fa-book-alt"></i>60 Lesson</span>
+                                        <span><i class="fa-solid fa-book"></i>60 Lesson</span>
                                     </div>
                                     <div class="course__rating">
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>3.5 (44)</span>
@@ -610,7 +610,7 @@
                             <div class="course__content">
                                 <div class="course__meta d-flex align-items-center justify-content-between">
                                     <div class="course__lesson">
-                                        <span><i class="far fa-book-alt"></i>28 Lesson</span>
+                                        <span><i class="fa-solid fa-book"></i>28 Lesson</span>
                                     </div>
                                     <div class="course__rating">
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.5 (44)</span>
@@ -652,7 +652,7 @@
                             <div class="course__content">
                                 <div class="course__meta d-flex align-items-center justify-content-between">
                                     <div class="course__lesson">
-                                        <span><i class="far fa-book-alt"></i>38 Lesson</span>
+                                        <span><i class="fa-solid fa-book"></i>38 Lesson</span>
                                     </div>
                                     <div class="course__rating">
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.8 (44)</span>
