create course footer

--- a/home.html
+++ b/home.html
@@ -791,7 +791,6 @@
                         <article class="article text-center">
                             <h1><b>Simple</b><br>
                                 <b> All Inclusive</b>
-                                <!-- <span class="yellow-shape position-relative"> -->
                                 <b>Pricing</b>
                                 <img class="yellowbg position-absolute" src="./assets/image/yellow-bg.png" alt="yellow"
                                     style="\margin-left: -170px;margin-top: 39px;"> </span>
@@ -906,7 +905,8 @@
 
     </main>
 
-    <footer class="">
+
+    <footer>
         <div class="footer_top pb-5">
             <div class="container">
                 <div class="row">
