--- a/course.html
+++ b/course.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/course.css">
 </head>
@@ -108,42 +108,10 @@
             </div>
         </section>
 
-        <section id="course-tab">
-            <div class="container">
-                <div class="row-12">
-                    <div class="pagination1">
-                        <div class="left-position">
-                            <div class="left-icons">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-grid" viewBox="0 0 16 16">
-                                    <path
-                                        d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z" />
-                                </svg>
-                            </div>
-                            <div class="second-icon">
-                                <i class="fa-solid fa-list"></i>
-
-                            </div>
-
-                            <div class="showing">
-                                <span>Showing 1 - 9 of 84</span>
-                            </div>
-                        </div>
-
-                        <div class="right-icons">
-                            <span>Option 1</span>
-
-                            <i class="fa-solid fa-chevron-down"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
 
-        </section>
 
-
-        <section id="course-size" class="course__area pt-115 pb-120 white-b   g">
+        <section id="course-size">
             <div class="container">
                 <div class="row grid">
                     <div class="col-xxl-4">
@@ -427,7 +395,7 @@
                                         <img src="./assets/image/teacher-7.jpg" alt="">
                                     </div>
                                     <h6><a href="instructor-details.html">
-                                        Pelican Steve</a></h6>
+                                            Pelican Steve</a></h6>
                                 </div>
                             </div>
                             <div class="course__more d-flex justify-content-between align-items-center">
@@ -537,12 +505,119 @@
 
 
 
+        <section id="pagination-end ">
+            <div class="pagination-all">
+                <div class="container">
+                    <div class="row">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
-
-
+        <section id="guide">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="own_guid_card position-relative">
+                            <div class="cicle_shape position-absolute">
+                                <img src="./assets/image/cta-shape.png" alt="Cicle shape">
+                            </div>
+                            <div class="own_card_content  d-flex align-items-center justify-content-between">
+                                <h3 class="postion-relative">You can be your own <br> Guiding star with our help</h3>
+                                <a href="#" class="btn position-relative">Get Started</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+
+
+    <footer>
+        <div class="footer_top pb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                        <a href="#" class="logo">
+                            <figure>
+                                <img src="./assets/image/logo.png" alt="logo">
+                            </figure>
+                        </a>
+                        <p>Great lesson ideas and lesson plans for ESL teachers! Educators can customize lesson
+                            plans to best.</p>
+                        <div class="icons mt-4">
+                            <a href="#" style="--btn-color: #285da1;"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" style="--btn-color: #03a9f4;"><i class="fab fa-twitter"></i></a>
+                            <a href="#" style="--btn-color: #d2173f;"><i class="fab fa-pinterest-p"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-xxl-3  col-xl-3  col-lg-3 col-md-4 col-sm-5">
+                        <ul class="footer_menu">
+                            <h4>Company</h4>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Courses</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Instructor</a></li>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="#">Become a Teacher</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                        <ul class="footer_menu ps-sm-0">
+                            <h4>Platform</h4>
+                            <li><a href="#">Browse Library</a></li>
+                            <li><a href="#">Library</a></li>
+                            <li><a href="#">Partners</a></li>
+                            <li><a href="#">News & Blogs</a></li>
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Tutorials</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                        <div class="footer_subscribe_form">
+                            <h4>Subscribe</h4>
+                            <form action="#" class="d-flex mb-4">
+                                <input type="email" placeholder="Your email address">
+                                <button type="submit" class=" position-relative">
+                                    <i class="fas fa-arrow-right position-absolute"></i>
+                                    <i class="fas fa-arrow-right position-absolute"></i>
+                                </button>
+                            </form>
+                            <p>Get the latest news and updates right at your inbox.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_bottom text-center">
+            <p class="m-0 py-3">&copy; 2022 Educal, All Rights Reserved. Design By <a href="#">Theme Pure</a></p>
+        </div>
+    </footer>
+
 
 
 
