create contact header and main

--- a/course.html
+++ b/course.html
@@ -97,12 +97,12 @@
                     <img src="./assets/image/course-up-img.jpeg" alt="">
                 </div>
                 <div class="cour">
-                    <h1><b>Courses</b></h1>
+                    <h1><b>Contact</b></h1>
                 </div>
                 <div class="ulli">
                     <ul>
                         <li> <a href="index.html">Home</a> </li>
-                        <li>Courses</li>
+                        <li>Contact</li>
                     </ul>
                 </div>
             </div>
