create contact footer

--- a/course.html
+++ b/course.html
@@ -97,7 +97,7 @@
                     <img src="./assets/image/course-up-img.jpeg" alt="">
                 </div>
                 <div class="cour">
-                    <h1><b>Contact</b></h1>
+                    <h1><b>Courses</b></h1>
                 </div>
                 <div class="ulli">
                     <ul>
@@ -134,8 +134,8 @@
                                         (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Become a product Manager learn the skills &
-                                        job.</a></h3>
+                                <h3 class="course__title"><a href=""><b>Become a product Manager learn the skills &
+                                    job.</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-1.jpg" alt="">
@@ -177,8 +177,8 @@
                                         (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Fundamentals of music theory
-                                        Learn new</a></h3>
+                                <h3 class="course__title"><a href=""><b>Fundamentals of music theory
+                                    Learn new</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-2.jpg" alt="">
@@ -220,7 +220,7 @@
                                         (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Bases Matemáticas dios Álgebra Ecuacion
+                                <h3 class="course__title"><a href=""><b>Bases Matemáticas dios Álgebra Ecuacion</b>
                                     </a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
@@ -262,7 +262,7 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>3.5 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Strategy law and organization Foundation</a></h3>
+                                <h3 class="course__title"><a href=""><b>Strategy law and organization Foundation</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-4.jpg" alt="">
@@ -304,8 +304,8 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.5 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">The business Intelligence
-                                        analyst Course 2022</a></h3>
+                                <h3 class="course__title"><a href=""><b>The business Intelligence
+                                    analyst Course 2022</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-5.jpg" alt="">
@@ -346,7 +346,7 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.8 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Bases Matemáticas dios Álgebra Ecuacion</a></h3>
+                                <h3 class="course__title"><a href=""><b>Bases Matemáticas dios Álgebra Ecuacion</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-6.jpg" alt="">
@@ -389,7 +389,7 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.6 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Build your media and Public presence</a></h3>
+                                <h3 class="course__title"><a href=""><b>Build your media and Public presence</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-7.jpg" alt="">
@@ -432,7 +432,7 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.4 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Creative writing through Storytelling</a></h3>
+                                <h3 class="course__title"><a href=""><b>Creative writing through Storytelling</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-8.jpg" alt="">
@@ -475,7 +475,7 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.2 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Product Manager Learn the Skills & job.</a></h3>
+                                <h3 class="course__title"><a href=""><b>Product Manager Learn the Skills & job.</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-9.jpg" alt="">
