--- a/home.html
+++ b/home.html
@@ -446,8 +446,8 @@
                                         (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Become a product Manager learn the skills &
-                                        job.</a></h3>
+                                <h3 class="course__title"><a href=""><b>Become a product Manager learn the skills &
+                                    job.</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-1.jpg" alt="">
@@ -489,8 +489,8 @@
                                         (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Fundamentals of music theory
-                                        Learn new</a></h3>
+                                <h3 class="course__title"><a href=""><b>Fundamentals of music theory
+                                    Learn new</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-2.jpg" alt="">
@@ -532,7 +532,7 @@
                                         (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Bases Matemáticas dios Álgebra Ecuacion
+                                <h3 class="course__title"><a href=""><b>Bases Matemáticas dios Álgebra Ecuacion</b>
                                     </a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
@@ -574,7 +574,7 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>3.5 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Strategy law and organization Foundation</a></h3>
+                                <h3 class="course__title"><a href=""><b>Strategy law and organization Foundation</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-4.jpg" alt="">
@@ -616,8 +616,8 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.5 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">The business Intelligence
-                                        analyst Course 2022</a></h3>
+                                <h3 class="course__title"><a href=""><b>The business Intelligence
+                                    analyst Course 2022</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-5.jpg" alt="">
@@ -658,7 +658,7 @@
                                         <i class="fa-sharp fa-solid fa-star" style="color: #ffa500;"></i>4.8 (44)</span>
                                     </div>
                                 </div>
-                                <h3 class="course__title"><a href="">Bases Matemáticas dios Álgebra Ecuacion</a></h3>
+                                <h3 class="course__title"><a href=""><b>Bases Matemáticas dios Álgebra Ecuacion</b></a></h3>
                                 <div class="course__teacher d-flex align-items-center">
                                     <div class="course__teacher-thumb mr-15">
                                         <img src="./assets/image/teacher-6.jpg" alt="">
@@ -695,9 +695,9 @@
                 <div class="row justify-content-center mb-5">
                     <div class="col-lg-5">
                         <article class="article text-center">
-                            <h3>Current
+                            <h3><b>Current</b>
                                 <span class="yellow-shape position-relative">
-                                    Events
+                                    <b>Events</b>
                                     <img class="yellowbg position-absolute" src="./assets/image/yellow-bg.png"
                                         alt="yellow"> </span>
                             </h3>
